# yt-music-wrapper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  electron-builder.yml  package-lock.json  package.json
.bdd/: playwright.config.ts
.bdd/features/installer/: mount-parsing.feature
.bdd/features/spotlight/: addon-loading.feature  indexing.feature  removal.feature
.bdd/interactions/: installer-helpers.ts  spotlight-addon.ts
.bdd/qa/findings/: installer-mount-parsing.md  spotlight-findings.md
.bdd/steps/: installer.steps.ts  spotlight.steps.ts
.bdd/support/: fixtures.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
assets/: icon.icns  pip.html
native/spotlight/: Cargo.toml  build.rs
native/spotlight/src/: lib.rs
scripts/: allow-macos.sh  build-dmg.sh  bump-version.sh  install-hooks.sh  install.sh  pre-push
src/: main.ts  pip.ts  preload.ts  sleep-timer.ts  spotlight.ts  track-observer.ts  tray.ts  types.ts
